<resources>
    <string name="app_name">PictureMaker</string>
    <string name="menu_item_recently">Recently</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_gallery">Gallery</string>
    <string name="filter_label_artist">Artist</string>
    <string name="filter_label_level">Level</string>
    <string name="filter_label_genre">Genre</string>
    <string name="filter_button_accept">Accept</string>
    <string name="actifity_picture_name">Name</string>
    <string name="activity_picture_my_score">My score</string>
    <string name="activity_picture_rating">Rating</string>
    <string name="activity_picture_start">Start</string>
    <string name="activity_rating_title">Rate the picture</string>
    <string name="fragment_gallery_filter">Filter</string>
    <string name="fragment_home_news">News</string>
    <string name="fragment_home_popular">Popular</string>
    <string name="fragment_profile_id">Id</string>
    <string name="fragment_profile_level">Level</string>
    <string name="fragment_profile_finished">Finished</string>
    <string name="fragment_profile_in_process">In process</string>
    <string name="fragment_profile_settings">Settings</string>
    <string name="collection_tab_favorite">Favorites</string>
    <string name="collection_tab_in_process">In process</string>
    <string name="collection_tab_finished">Finished</string>
    <string name="sort_first_popular">First popular</string>
    <string name="sort_descending_ratings">Descending ratings</string>
    <string name="sort_ascending_ratings">Ascending ratings</string>
    <string name="sort_descending_difficulty">Descending difficulty</string>
    <string name="sort_ascending_difficulty">Ascending difficulty</string>
    <string name="level_type_low">Low</string>
    <string name="level_type_mean">Mean</string>
    <string name="level_type_high">High</string>
    <string name="any">Any</string>
</resources>